# starting-ragchatbot-codebase

./: .flake8  .mcp.json.disabled  CLAUDE.md  frontend-changes.md  package-lock.json  pyproject.toml
backend/: ai_generator.py  app.py  document_processor.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_config_issues.py  test_course_search_tool.py  test_fix_verification.py  test_rag_system.py
frontend/: index.html  script.js  style.css
scripts/: format-code.sh  lint-check.sh  quality-check.sh
